# wko

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  company.config.yaml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  company_onboarding.yml  feature_request.yml
.github/workflows/: auto-index.yml  ci-lint.yml  ci-render.yml  ci-validate.yml  release.yml
docs/: 00-company-overview.md  01-org-structure.md  02-wiki-architecture.md  03-permissions.md  04-glossary.md  05-lark-base-connections.md  08-contributing.md  09-master-registry.md  10-page-types-taxonomy.md  README.md
docs-meta/: ONBOARDING.md
docs/superpowers/plans/: 2026-05-19-wko-public-template-implementation.md
docs/superpowers/specs/: 2026-05-19-wko-public-template-design.md
examples/acme-foods-vietnam/: company.config.yaml
scripts/: _common.py  build_backlink_graph.py  content_quality_audit.py  generate_index.py  init_company.py  migrate_v4_to_v41.py  pull_from_lark.py  rebuild_hub_toc.py  rebuild_master_index.py  render.py  sync_index_contributed_column.py  validate_config.py  validate_structure.py  wiki_kpi_report.py  wiki_navigator.py  wiki_reviewer_bot.py
skills/: 01-page-format.md  03-linking-rules.md  09-contributing-workflow.md  10-master-registry.md  11-page-types.md
sources/schemas/: README.md  lark_wiki_schema.json  wiki_nodes_response.json
tests/: conftest.py  test_common.py  test_content_quality_audit.py  test_e2e.py  test_generate_index.py  test_init_company.py  test_migrate_v4_to_v41.py  test_pull_from_lark.py  test_rebuild_hub_toc.py  test_rebuild_master_index.py  test_render.py  test_render_watch.py  test_validate_config.py  test_validate_structure.py  test_wiki_kpi_report.py  test_wiki_reviewer_bot.py
