[project]
name = "wko"
version = "0.1.0"
description = "Wiki Operating System — Lark Wiki Company OS template"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "saucevn", email = "hello@saucevn.dev" }
]
keywords = ["lark", "feishu", "wiki", "company-os", "template", "vietnamese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Office/Business",
]
dependencies = [
    "PyYAML>=6.0",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/saucevn/wko"
Documentation = "https://github.com/saucevn/wko/blob/main/docs-meta/ONBOARDING.md"
Repository = "https://github.com/saucevn/wko"
Issues = "https://github.com/saucevn/wko/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C90", "UP", "S"]
ignore = ["S603", "S607"]  # subprocess calls intentional

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=scripts --cov-report=term-missing"
pythonpath = [".", "scripts"]
markers = [
    "slow: tests that take >1s",
    "interactive: tests requiring TTY (skip in CI)",
]
